<resources>
    <string name="app_name">Hayak</string>
    <string name="title_home">Beranda</string>
    <string name="title_map">Peta</string>
    <string name="title_community">Komunitas</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_login">Masuk</string>
    <string name="headline_login">Senang melihatmu kembali!</string>
    <string name="hint_email">Masukkan email kamu</string>
    <string name="hint_password">Masukkan kata sandi</string>
    <string name="title_forgot_password">Lupa kata sandi?</string>
    <string name="title_dont_have_account">Belum punya akun?</string>
    <string name="title_create_account">Buat akun</string>
    <string name="onboarding_title">Selamat datang di Hayak.AI</string>
    <string name="onboarding_description">Sebagai pengingat kerabat terdekat ketika Anda sedang dalam bahaya.</string>
    <string name="onboarding_title_login">Masuk</string>
    <string name="onboarding_title_create_account">Buat akun baru</string>
    <string name="onboarding_line_decoration">hiasan garis</string>
    <string name="onboarding_otherways">Atau coba dengan</string>
    <string name="onboarding_with_google">Lanjutkan dengan Google</string>
    <string name="title_terms_conditions">Dengan melanjutkan, Anda dianggap telah membaca dan menyetujui syarat dan ketentuan yang berlaku.</string>
    <string name="onboarding_image_decoration">Hiasan gambar</string>
    <string name="hint_image_decoration">hiasan_gambar</string>
    <string name="title_send_otp">Kirim otp</string>
    <string name="title_update_password">Perbarui kata sandi</string>
    <string name="hint_otp">Masukkan OTP dari email</string>
    <string name="hint_new_password">Masukkan kata sandi baru</string>
    <string name="headline_create_account">Yuk bergabung untuk ciptakan lingkungan yang aman</string>
    <string name="title_have_account">Sudah punya akun?</string>
    <string name="hint_confirm_password">Konfirmasi kata sandi</string>
    <string name="bell_icon">Bell Icon</string>
    <string name="icon_map_safety">Icon map safety</string>
    <string name="title_safety_score">Safety Score</string>
    <string name="title_score">%d</string>
    <string name="title_say_name">Halo, %s!</string>
    <string name="home_description">Jangan lupa tetap menjaga kesalamatan dimanapun Anda berada, karena saya hanya asisten pemberitahuan bahaya kepada kerabat terdekat:)</string>
    <string name="title_high">High</string>
    <string name="title_medium">Medium</string>
    <string name="title_low">Low</string>
    <string name="title_voice_detection_on">Sedang aktif mendengarkan respon pengguna...</string>
    <string name="title_emergency_contact">Daftar Kontak Darurat</string>
    <string name="title_add_contact">Tambah</string>
    <string name="title_img_recorder">Gambar deteksi suara</string>
    <string name="title_my_profile">Profil saya</string>
    <string name="title_account_settings">Pengaturan akun</string>
    <string name="common_icon_description">A icon</string>
    <string name="title_personal_information">Informasi pribadi</string>
    <string name="title_password_email">Email dan kata sandi</string>
    <string name="title_retrain_model">Latih ulang model suara</string>
    <string name="title_accessibility">Aksebilitas</string>
    <string name="title_dark_mode">Mode gelap</string>
    <string name="title_track_my_location">Lacak lokasi saya</string>
    <string name="title_voice_detection">Deteksi suara</string>
    <string name="title_other">Lainnya</string>
    <string name="title_faq">FAQ</string>
    <string name="title_help">Bantuan</string>
    <string name="title_edit_profil">Edit Profil</string>
    <string name="title_upload_photo_profile">Upload foto profilmu agar terlihat menarik</string>
    <string name="hint_full_name">Nama lengkap</string>
    <string name="hint_phone_number">Nomor HP</string>
    <string name="title_save">Simpan</string>
    <string name="title_settings_email_password">Email dan kata sandi</string>
    <string name="hint_email_short">Email</string>
    <string name="hint_old_password">Kata sandi lama</string>
    <string name="hint_new_password_short">Kata sandi baru</string>
    <string name="title_new_contact">Tambah kontak</string>
    <string name="hint_message">Pesan</string>
    <string name="title_edit_contact">Edit kontak</string>
    <string name="title_notify">Beritahu kontak?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="news_image">a news</string>
    <string name="title_news">Berita</string>
    <string name="title_list_report">Laporan</string>
    <string name="title_report">Laporkan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_comment">Tulis komentar</string>
    <string name="hint_add_location">Tambahkan lokasi</string>
    <string name="total_comments">%d</string>
    <string name="title_more">Selengkapnya</string>
    <string name="ed_email_error_msg_is_empty">Email tidak boleh kosong</string>
    <string name="ed_email_error_msg_is_invalid">Email tidak valid</string>
    <string name="ed_password_error_msg_is_empty">Password tidak boleh kosong</string>
    <string name="ed_password_error_msg_invalid_length">Password minimal 8 karakter</string>
    <string name="title_logout">Keluar</string>
    <string name="ed_password_error_msg_not_match">Password tidak sama</string>
    <string name="hint_name">Masukkan nama kamu</string>
    <string name="ed_name_error_msg_is_empty">Nama tidak boleh kosong</string>
    <string name="register_success">Pendaftan akun berhasil!</string>
    <string name="title_delete_contact">Hapus Kontak</string>
    <string name="content_delete_contact">Apakah Anda serius ingin menghapus kontak ini?</string>
    <string name="yes">Iya</string>
    <string name="cancel">Batal</string>
    <string name="success_delete_contact">Berhasil menghapus kontak</string>
    <string name="ed_phone_error_msg_is_empty">Nomor HP tidak boleh kosong</string>
    <string name="ed_phone_error_msg_is_invalid">Nomor HP tidak valid</string>
    <string name="ed_message_error_msg_is_empty">Pesan tidak boleh kosong</string>
    <string name="success_update_contact">Berhasil memperbarui kontak</string>
    <string name="contact_added_successfully">Kontak berhasil ditambahkan</string>
    <string name="title_not_found">Tidak ada data</string>
    <string name="photo_profile_updated">Berhasil mengunggah foto profil</string>
    <string name="evidence_uploaded">Berhasil mengupload bukti laporan</string>
    <string name="community_tab_text_1">Semua</string>
    <string name="community_tab_text_2">Saya</string>
    <string name="ed_title_error_msg_is_empty">Judul tidak boleh kosong</string>
    <string name="ed_content_error_msg_is_empty">Konten tidak boleh kosong</string>
    <string name="ed_category_error_msg_is_empty">Kategori tidak boleh kosong</string>
    <string name="audio_classifier_failed">Audio Classifier failed to initialize. See error logs for details</string>
    <string name="tflite_is_not_initialized_yet">TFlite tidak bisa diinisilisasi</string>
    <string name="title_voice_detection_off">Tolong hidupkan saya jika merasa tidak aman</string>
    <string name="ed_otp_error_msg_is_empty">OTP tidak boleh kosong</string>
    <string name="ed_otp_error_msg_is_invalid">OTP tidak valid</string>
    <string name="title_select_map">Tandai Lokasi</string>
    <string name="title_upload_evidence">Upload bukti laporan jika ada</string>
    <string name="title_icon_location">Location icon</string>
    <string name="by_me">(Saya) %s</string>
    <string name="title_post">Judul</string>
    <string name="title_category">Kategori</string>
    <string name="title_delete_location">Hapus lokasi</string>
    <string name="title_add_content">Tulis konten...</string>
    <string name="title_create_post">Membuat Postingan</string>
    <string name="title_update_post">Memperbarui Postingan</string>
    <string name="retry">Coba lagi</string>
</resources>