<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/safety_score_bg"
        android:gravity="center"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/icon_map_safety"
            android:src="@drawable/tdesign_map_safety"
            app:tint="@color/md_theme_onPrimaryContainer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_safety_score"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/md_theme_onPrimaryContainer"
            android:textFontWeight="500" />

        <LinearLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/safety_score_indicator_bg"

            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_score"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                android:textColor="@color/md_theme_onTertiary"
                android:textFontWeight="500"
                tools:text="90" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_profile"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/baseline_person_outline_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_say_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_say_name"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="Halo, Jordi" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:text="@string/home_description"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_say_name" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_high"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32dip"
            android:text="@string/title_high" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_medium"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32dip"
            android:text="@string/title_medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_low"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32dip"
            android:text="@string/title_low" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <ImageView
        android:id="@+id/voice_detection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/title_img_recorder"
        android:src="@drawable/voice_detection_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleGroup" />

    <TextView
        android:id="@+id/title_voice_detection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_voice_detection_on"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voice_detection" />


    <TextView
        android:id="@+id/title_list_emergency_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_emergency_contact"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textFontWeight="500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_voice_detection" />

    <Button
        android:id="@+id/btn_add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:minWidth="0dp"
        android:minHeight="20dp"
        android:paddingHorizontal="8dp"
        android:text="@string/title_add_contact"
        android:textSize="8sp"
        app:icon="@drawable/round_add_24"
        app:iconPadding="4dp"
        app:iconSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/title_list_emergency_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_list_emergency_contact"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tv_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/title_not_found"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_list_emergency_contact" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_list_emergency_contact"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/item_contact" />

</androidx.constraintlayout.widget.ConstraintLayout>