<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newcontact.NewContactActivity">

    <Button
        android:id="@+id/back_button"
        style="?attr/materialIconButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:icon="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/action_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title_new_contact"
        android:textAppearance="@style/TextAppearance.Material3.ActionBar.Subtitle"
        android:textFontWeight="500"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="42dp"
        android:hint="@string/hint_full_name"
        app:startIconDrawable="@drawable/outline_person_24"
        app:boxCornerRadiusBottomEnd="100dp"
        app:boxCornerRadiusBottomStart="100dp"
        app:boxCornerRadiusTopEnd="100dp"
        app:boxCornerRadiusTopStart="100dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/back_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/hint_phone_number"
        app:boxCornerRadiusBottomEnd="100dp"
        app:boxCornerRadiusBottomStart="100dp"
        app:boxCornerRadiusTopEnd="100dp"
        app:startIconDrawable="@drawable/outline_phone_24"
        app:boxCornerRadiusTopStart="100dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/til_full_name"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/hint_email_short"
        app:boxCornerRadiusBottomEnd="100dp"
        app:boxCornerRadiusBottomStart="100dp"
        app:boxCornerRadiusTopEnd="100dp"
        app:boxCornerRadiusTopStart="100dp"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/outline_email_24"
        app:layout_constraintTop_toBottomOf="@+id/til_phone"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/hint_message"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="start"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/title_save"
        app:icon="@drawable/outline_check_circle_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>